Added grout (doesn't work)

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ org.gradle.jvmargs=-Xmx3G
 
 # Mod Properties
 	mod_version = 0.1.0
-	maven_group = com.github.kadirac
-	archives_base_name = tconstruct-fabric
+	maven_group = net.fabricmc
+	archives_base_name = tconstruct
 
 # Dependencies
 	fabric_version=0.58.5+1.19.1
